Fix on Firefox

--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -328,7 +328,6 @@ input {
   color: #000;
   padding: 11px 16px;
   border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
   cursor: pointer;
   border-radius: 8px;
   height: 48px;
@@ -361,19 +360,23 @@ input {
 .hero-section {
   height: 80vh;
   border-radius: 10px;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  display: flex;
+  flex-direction: row;
   overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin : 0 3% 10px 3%;
 }
 .hero-content {
   padding: 51px 67px;
-  grid-column: span 4;
   background: #232323;
   color: #fff;
   position: relative;
   text-align: left;
+  display: inline-flex;
+  flex-direction: column;
+  flex-shrink:2;
+  max-width: 40%;
+
 }
 .hero-content::after {
   content: "";
@@ -407,13 +410,12 @@ input {
   margin: 59px 0 0 0 ;
 }
 .hero-img {
-  grid-column: span 8;
+
   width: 100%;
 }
 .hero-img img {
   width: 100%;
-  min-height: 100%;
-  display: block;
+  height: 100%;
   padding: 0;
   object-fit: cover;
 }
@@ -503,6 +505,9 @@ footer {
     background: #fff;
     color: #000;
     padding: 20px;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
   }
   .hero-content::after {
     content: unset;
